# claude-code-context-optimizer

./: .env.example  .gitignore  .mcp.json.example  ATLAS_BENCHMARK_REPORT.md  CLAUDE_BENCHMARK_REPORT.md  Dockerfile.mcp  OBSERVABLE_BENCHMARK_REPORT.md  PRD_HACKATHON_FINAL.md  README.md  __init__.py  api.py  app.py  atlas.py  benchmark_claude_comparison.py  cli.py  demo_live.py  docker-compose.mcp.yml  embed_codebase.py  embeddings.py  galileo.py  handoff.py  inference.py  mcp_server_standalone.py  pyproject.toml  run_observable_benchmark.py
evals/: __init__.py  atlas_store.py  fireworks_client.py  galileo_observe.py  run_evals.py  utils.py
sandbox/: __init__.py  vercel_sandbox.py
