[project]
name = "ccv3-mcp"
version = "1.0.0"
description = "CCv3 MCP Server - Context Engineering for Claude Code with Vercel Sandbox integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "fireworks-ai",
    "vercel",
    "tiktoken>=0.5.0",
    "pytest",
]

[project.scripts]
ccv3-mcp = "mcp_server_standalone:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
    "sandbox",
    "evals",
]
