[project]
name = "ccv3-mcp"
version = "1.0.0"
description = "CCv3 MCP Server - Context Engineering for Claude Code. Achieves 76% token reduction via MongoDB Atlas Vector Search."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["claude", "mcp", "context", "mongodb", "vector-search", "embeddings", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "fireworks-ai",
    "vercel",
    "tiktoken>=0.5.0",
    "pytest",
    "anthropic>=0.75.0",
    "rich>=13.0.0",
]

[project.scripts]
ccv3-mcp = "mcp_server_standalone:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
    "sandbox",
    "evals",
]
